完成 1.20.1 的同步