@@ -4,9 +4,11 @@ import com.github.ysbbbbbb.kaleidoscopetavern.api.blockentity.IBarrel;
 import com.github.ysbbbbbb.kaleidoscopetavern.datamap.data.DrinkEffectData;
 import com.github.ysbbbbbb.kaleidoscopetavern.datamap.resources.DrinkEffectDataReloadListener;
 import com.github.ysbbbbbb.kaleidoscopetavern.init.ModDataComponents;
+import com.github.ysbbbbbb.kaleidoscopetavern.util.ColorUtils;
 import com.google.common.collect.Lists;
 import net.minecraft.ChatFormatting;
 import net.minecraft.core.Holder;
+import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.effect.MobEffectInstance;
@@ -22,6 +24,10 @@ import java.util.List;
 
 public class BottleBlockItem extends BlockItem {
     public static final String BREW_LEVEL_KEY = "BrewLevel";
+    /**
+     * 调酒所需的最低酿造等级（优质，即等级 4 以上）。
+     */
+    public static final int MIN_BREW_LEVEL_FOR_SHAKER = 4;
 
     public BottleBlockItem(Block block) {
         this(block, new Properties()
@@ -52,7 +58,18 @@ public class BottleBlockItem extends BlockItem {
     }
 
     public static int clampBrewLevel(int brewLevel) {
-        return Math.max(IBarrel.BREWING_NOT_STARTED, Math.min(brewLevel, IBarrel.BREWING_FINISHED));
+        return Math.clamp(brewLevel, IBarrel.BREWING_NOT_STARTED, IBarrel.BREWING_FINISHED);
+    }
+
+    /**
+     * 判断酒瓶物品是否满足调酒品质要求（brewLevel >= {@link #MIN_BREW_LEVEL_FOR_SHAKER}）。
+     * 非 BottleBlockItem 的物品直接返回 true（药水等其他原料不受此限制）。
+     */
+    public static boolean isValidForShaker(ItemStack stack) {
+        if (!(stack.getItem() instanceof BottleBlockItem)) {
+            return true;
+        }
+        return getBrewLevel(stack) >= MIN_BREW_LEVEL_FOR_SHAKER;
     }
 
     public ItemStack getFilledStack(int brewLevel) {
@@ -63,6 +80,15 @@ public class BottleBlockItem extends BlockItem {
 
     @Override
     public void appendHoverText(ItemStack stack, TooltipContext context, List<Component> tooltip, TooltipFlag flag) {
+        // 添加颜色说明
+        ChatFormatting applied = ColorUtils.ITEM_COLOR_CACHE.apply(stack.getItem());
+        if (applied != ChatFormatting.RESET) {
+            String key = "color.kaleidoscope_tavern.%s".formatted(applied.getName());
+            Component text = Component.translatable("color.kaleidoscope_tavern.prefix")
+                    .withStyle(ChatFormatting.GRAY)
+                    .append(Component.translatable(key).withStyle(applied));
+            tooltip.add(text);
+        }
         int brewLevel = getBrewLevel(stack);
         if (0 < brewLevel) {
             Component brewLevelText = Component.translatable("message.kaleidoscope_tavern.barrel.brew_level.%d".formatted(brewLevel));
@@ -88,6 +114,7 @@ public class BottleBlockItem extends BlockItem {
             }
 
             if (!effectsShow.isEmpty()) {
+                tooltip.add(CommonComponents.space());
                 PotionContents.addPotionTooltip(effectsShow, tooltip::add, 1.0F, context.tickRate());
             }
         }
